--- a/css/styles.css
+++ b/css/styles.css
@@ -6,3 +6,22 @@ body {
     background-color: #b3b0b0;
 }
 
+.button-class{
+    background-color: #970707;
+    border: none;
+    color: #fffdfd;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display:inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.5s;
+    cursor: pointer;
+    
+  }
+  
+  .selected{
+    border: 5px #ee0303;
+  }
