--- a/css/styles.css
+++ b/css/styles.css
@@ -63,3 +63,13 @@ body {
   max-width: 700px;
   text-align: left;
 }
+
+.modal-close {
+  float: right;
+  -webkit-appearance: none;
+  border: 0;
+  background: none;
+  color: #777;
+  text-decoration: underline;
+}
+
