--- a/css/styles.css
+++ b/css/styles.css
@@ -53,16 +53,20 @@ body {
   text-align: center;
 }
 
-.modal {
+/*
+.modal{
   margin: auto;
   display: inline-block;
   box-sizing: border-box;
   background: #fff;
   padding: 15px;
-  width: 100%;
+  width: 500px;
+  height: 300px;
   max-width: 700px;
   text-align: left;
+
 }
+*/
 
 .modal-close {
   float: right;
