--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body {
   font-weight: 400;
   font-style: normal;
   color: #970707;
-  background-color: #b3b0b0;
+  background-color: #fbfdff;
 }
 
 .button-class {
